<resources>
    <string name="app_name">alc-MMSystem-admin</string>



    <style name="certificate">

        <item name="android:textSize">18sp</item>

        <item name="android:textColor">#333333</item>

    </style>

    <style name="approved_ce">

        <item name="android:textSize">16sp</item>

        <item name="android:textColor">#333333</item>

    </style>

    <style name="some_id">

        <item name="android:textSize">24sp</item>

        <item name="android:textColor">#141414</item>

    </style>

    <style name="my_generate">

        <item name="android:textSize">16sp</item>

        <item name="android:textColor">#333333</item>

    </style>

    <style name="some_id2">

        <item name="android:textSize">24sp</item>

        <item name="android:textColor">#141414</item>

    </style>

    <style name="view_text">
        <item name="android:textSize">12sp</item>
        <item name="android:fontWeight">400</item>

    </style>
    <style name="certificate_approval">

        <item name="android:textSize">16sp</item>

        <item name="android:textColor">#333333</item>

    </style>

    <style name="some_id3">

        <item name="android:textSize">12sp</item>

        <item name="android:textColor">#FFFFFF</item>

    </style>

    <style name="generate_new_certificate">
        <item name="android:textFontWeight">600</item>
        <item name="android:textSize">18sp</item>
        <item name="android:lineHeight">29.92sp</item>
    </style>

    <style name="select_prog">

        <item name="android:textSize">18sp</item>

        <item name="android:textColor">#333333</item>

    </style>

    <style name="franka_kebe">

        <item name="android:textSize">15sp</item>

        <item name="android:textColor">#333333</item>

    </style>

    <style name="program_ass">

        <item name="android:textSize">11sp</item>

        <item name="android:textColor">#808080</item>

    </style>

    <style name="program_ass_caps">

        <item name="android:textSize">11sp</item>

        <item name="android:textColor">#035D63</item>

    </style>
    <style name="mentor_gad">

        <item name="android:textSize">11sp</item>

        <item name="android:textColor">#035D63</item>

    </style>
    <style name="select_program">

        <item name="android:textSize">16sp</item>

        <item name="android:textColor">#808080</item>

    </style>
    <style name="pending_app">

        <item name="android:textSize">
            18sp
        </item>

        <item name="android:textColor">
            #333333
        </item>

    </style>
    <style name="certificate1">

        <item name="android:textSize">18sp</item>

        <item name="android:textColor">#333333</item>

    </style>
    <style name="franka_kebe1">

        <item name="android:textSize">16sp</item>

        <item name="android:textColor">#333333</item>

    </style>
    <style name="gads_cloud_">

        <item name="android:textSize">
            18sp
        </item>

        <item name="android:textColor">
            #333333
        </item>

    </style>
    <style name="body_2">

        <item name="android:textSize">
            16sp
        </item>

        <item name="android:textColor">
            #333333
        </item>

    </style>
    <style name="mentor">

        <item name="android:textSize">
            12sp
        </item>

        <item name="android:textColor">
            #808080
        </item>

    </style>
    <style name="oct_16_2022">

        <item name="android:textSize">
            10sp
        </item>

        <item name="android:textColor">
            #808080
        </item>

    </style>
    <style name="certicate_g">

        <item name="android:textSize">
            12sp
        </item>

        <item name="android:textColor">
            #808080
        </item>

    </style>
    <style name="body_3">

        <item name="android:textSize">
            14sp
        </item>

        <item name="android:textColor">
            #333333
        </item>

    </style>
    <style name="mentor_mana">

        <item name="android:textSize">
            12sp
        </item>

        <item name="android:textColor">
            #4D4D4D
        </item>

    </style>






    <string name="certificate">Certificates</string>
    <string name="left_arrows">left_arrows</string>
    <string name="approved_ce">Approved certificates</string>
    <string name="some_id">287</string>
    <string name="view">View</string>
    <string name="plain_white">plain_white</string>
    <string name="animated_pic">animated_pic</string>
    <string name="plain_white2">plain_white2</string>
    <string name="animated_pic2">animated_pic2</string>
    <string name="my_generate">My Generated Certificates</string>
    <string name="some_id2">160</string>
    <string name="view_text">View</string>
    <string name="certificate_approval">Certificates pending approval</string>
    <string name="some_id3">3</string>
    <string name="generate_new_certificate">Generate New Certificate</string>
    <string name="select_prog">Select Program</string>
    <string name="franka_kebe">Franka Kebede</string>
    <string name="program_ass">Program Assistant, Andela, She/her</string>
    <string name="program_ass_caps">PROGRAM ASST.</string>
    <string name="prof_pic">profile_pic</string>
    <string name="profile_img">profile_image</string>
    <string name="mentor_gad">MENTOR-GAD</string>
    <string name="select_program">Select Program</string>
    <string name="certificate_image">certificate_image</string>
    <string name="generate">Generate</string>
    <string name="delete">Delete</string>
    <string name="certificate1">Certificate Generated Successfully!</string>
    <string name="done">Done</string>
    <string name="franka_kebe1">Franka Kebede\nGADS CLOUD 2022 - COMPL...</string>
    <string name="pending_app">Pending Approval</string>
    <string name="gads_cloud_">GADS CLOUD 2022 CERTIFICATE</string>
    <string name="body_2">Fraka Kebede</string>
    <string name="mentor">Mentor</string>
    <string name="oct_16_2022">Oct 16, 2022</string>
    <string name="certicate_g">Certicate generated by:</string>
    <string name="body_3">Peculiah C. Umeh</string>
    <string name="mentor_mana">Mentor Manager</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>


    >>>>>>> Stashed changes
</resources>