<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="319dp"
        android:contentDescription="@string/left_arrows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector" />

    <TextView
        android:id="@+id/gads_cloud_"
        android:layout_width="246dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="58dp"
        android:fontFamily="@font/mukta"
        android:gravity="top"
        android:text="@string/gads_cloud_"
        android:textAppearance="@style/gads_cloud_"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="320dp"
        android:layout_height="82dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="251dp"
        android:contentDescription="@string/profile_img"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ell2" />

    <!-- Body 2 -->

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="13dp"
        android:layout_height="16dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="203dp"
        android:contentDescription="@string/animated_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/twemoji_flag_nigeria" />

    <TextView
        android:id="@+id/body_2"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="123dp"
        android:fontFamily="@font/mukta"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-7sp"
        android:text="@string/body_2"
        android:textAppearance="@style/body_2"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="81dp"
        android:contentDescription="@string/animated_pic"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/twemoji_flag_nigeria" />
    <!-- Mentor -->
    <TextView
        android:id="@+id/mentor"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="198dp"
        android:fontFamily="@font/mukta"
        android:gravity="top"
        android:text="@string/mentor"
        android:textAppearance="@style/mentor"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/certificate_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ace2" />

    <TextView
        android:id="@+id/oct_16_2022"
        android:layout_width="51dp"
        android:layout_height="17dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="268dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/mukta"
        android:gravity="top"
        android:text="@string/oct_16_2022"
        android:textAppearance="@style/oct_16_2022"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/certicate_g"
        android:layout_width="119dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="220dp"
        android:fontFamily="@font/mukta"
        android:gravity="center_vertical"
        android:text="@string/certicate_g"
        android:textAppearance="@style/certicate_g"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/body_3"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="518dp"
        android:layout_marginEnd="227dp"
        android:fontFamily="@font/mukta"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/body_3"
        android:textAppearance="@style/body_3"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mentor_mana"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="538dp"
        android:layout_marginEnd="255dp"
        android:gravity="top"
        android:text="@string/mentor_mana"
        android:textAppearance="@style/mentor_mana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="189dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="5dp"
        android:padding="5dp"
        android:text="@string/decline"
        android:textAllCaps="false"
        android:textColor="@color/mms_pry_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonApprove"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="21dp"
        android:backgroundTint="@color/mms_pry_2"
        android:padding="5dp"
        android:text="@string/approve"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>