<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="319dp"
        android:contentDescription="@string/left_arrows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector" />

    <TextView
        android:id="@+id/my_generate"
        android:layout_width="206dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="104dp"
        android:fontFamily="@font/mukta"
        android:gravity="top"
        android:text="@string/my_generate"
        android:textAppearance="@style/my_generate"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="318dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_8"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="235dp"
        android:contentDescription="@string/certificate_image"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8"
        app:srcCompat="@drawable/ace1"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/franka_kebe"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/mukta"
        android:gravity="top"
        android:lineSpacingExtra="-7sp"
        android:text="@string/franka_kebe1"
        android:textAppearance="@style/franka_kebe1"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/animated_pic"
        app:layout_constraintEnd_toEndOf="@id/rectangle_8"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8"
        app:srcCompat="@drawable/trash_delete_bin_1"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>