<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Certificate Generated Successfully! -->
    <TextView
        android:id="@+id/certificate"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/mukta"
        android:gravity="center_horizontal|top"
        android:text="@string/certificate1"
        android:textAppearance="@style/certificate1"
        android:textFontWeight="600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="76dp"
        android:contentDescription="@string/animated_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/success_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDone"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="289dp"
        android:layout_marginEnd="21dp"
        android:backgroundTint="@color/mms_pry_2"
        android:text="@string/done"
        android:textAllCaps="false"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>